# shouban

./: .env.example  .gitignore  docker-compose.yml
.github/workflows/: build-and-push.yml
bg_api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  run_server.py  test_client.py
bg_api/src/bg_api/: __init__.py  auth.py  main.py  openroute_client.py
web/: .env.example  index.html  package.json  pnpm-lock.yaml  preset-config.md  vite.config.js
web/src/: App.jsx  index.css
web/src/components/: ImageProcessor.jsx  ImageViewer.jsx
